# Judger

./: .gitignore  CMakeLists.txt  README.md  install.sh  runtest.sh
bindings/python-rj/: 1.py  _judger.py  setup.py
demo/: 2.c  2.cpp  3.c  4.c  base1.sh  base2.sh  base_py.sh  compile.sh  compile_pas.sh  compile_py.sh  demo.py  demo_judge_c.py  demo_judge_py.py  fs  log  main  main.pas  main.py  out1  output_size  output_size.c  t.sh  t2  t3  t4  t5
src/: main.c
tests/Python_and_core/: test.py
